set java version 8 for assembly-maven-plugin and bindex-core.